--- a/PlasmidFiner.ipynb
+++ b/PlasmidFiner.ipynb
@@ -24,28 +24,215 @@
     {
       "cell_type": "code",
       "source": [
-        "! pip install diamond\n",
-        "! conda install -c bioconda prodigal"
+        "! pip install -q condacolab\n",
+        "import condacolab\n",
+        "condacolab.install()\n",
+        "! conda install pandas\n",
+        "! conda install biopython -c bioconda\n",
+        "! conda install -c bioconda diamond\n",
+        "! conda install -c bioconda prodigal\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PeLhZuV4USzg",
-        "outputId": "859d532f-5218-45a3-d745-04943777c990"
+        "outputId": "ab11044c-9db5-40c5-9bd0-9ba11d5e826f"
       },
-      "execution_count": 26,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: diamond in /usr/local/lib/python3.7/dist-packages (4.0.515)\n",
-            "Requirement already satisfied: configobj in /usr/local/lib/python3.7/dist-packages (from diamond) (5.0.6)\n",
-            "Requirement already satisfied: psutil in /usr/local/lib/python3.7/dist-packages (from diamond) (5.4.8)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from configobj->diamond) (1.15.0)\n",
-            "/bin/bash: conda: command not found\n"
+            "⏬ Downloading https://github.com/jaimergp/miniforge/releases/latest/download/Mambaforge-colab-Linux-x86_64.sh...\n",
+            "📦 Installing...\n",
+            "📌 Adjusting configuration...\n",
+            "🩹 Patching environment...\n",
+            "⏲ Done in 0:00:37\n",
+            "🔁 Restarting kernel...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd PlasmidFinder_1.0/example_data\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SkSHMfI6lU-H",
+        "outputId": "c9472854-efc0-4d87-ed30-d8db2ebfb279"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting package metadata (current_repodata.json): - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\bdone\n",
+            "Solving environment: - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\bdone\n",
+            "\n",
+            "## Package Plan ##\n",
+            "\n",
+            "  environment location: /usr/local\n",
+            "\n",
+            "  added / updated specs:\n",
+            "    - biopython\n",
+            "\n",
+            "\n",
+            "The following packages will be downloaded:\n",
+            "\n",
+            "    package                    |            build\n",
+            "    ---------------------------|-----------------\n",
+            "    biopython-1.79             |   py37h540881e_2         2.6 MB  conda-forge\n",
+            "    ------------------------------------------------------------\n",
+            "                                           Total:         2.6 MB\n",
+            "\n",
+            "The following NEW packages will be INSTALLED:\n",
+            "\n",
+            "  biopython          conda-forge/linux-64::biopython-1.79-py37h540881e_2\n",
+            "\n",
+            "\n",
+            "\n",
+            "Downloading and Extracting Packages\n",
+            "biopython-1.79       | 2.6 MB    | : 100% 1.0/1 [00:01<00:00,  1.28s/it]\n",
+            "Preparing transaction: / \b\bdone\n",
+            "Verifying transaction: \\ \b\bdone\n",
+            "Executing transaction: / \b\b- \b\bdone\n",
+            "Retrieving notices: ...working... done\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! ls -lh \n",
+        "! python ../bin/PlasmidFinder.py -i test_data_20kbp_2398seqs.fasta\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KCdnfMoWiGQM",
+        "outputId": "e9f9c351-4f6a-4e82-c2fc-351a9b3c3b10"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 94M\n",
+            "drwxr-xr-x 3 root root 4.0K Aug 30 02:40 plasmid_prediction\n",
+            "-rw-r--r-- 1 root root  94M Jul 26 15:15 test_data_20kbp_2398seqs.fasta\n",
+            "Filtering contigs < 5 Kbp out ...\n",
+            "Now splitting input fasta file ...\n",
+            "Now predicting protein sequences using Prodigal ...\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/7.fasta.faa -o plasmid_prediction/input.fasta_temp/7.fasta.out -i plasmid_prediction/input.fasta_temp/7.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/6.fasta.faa -o plasmid_prediction/input.fasta_temp/6.fasta.out -i plasmid_prediction/input.fasta_temp/6.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/5.fasta.faa -o plasmid_prediction/input.fasta_temp/5.fasta.out -i plasmid_prediction/input.fasta_temp/5.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/0.fasta.faa -o plasmid_prediction/input.fasta_temp/0.fasta.out -i plasmid_prediction/input.fasta_temp/0.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/2.fasta.faa -o plasmid_prediction/input.fasta_temp/2.fasta.out -i plasmid_prediction/input.fasta_temp/2.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/3.fasta.faa -o plasmid_prediction/input.fasta_temp/3.fasta.out -i plasmid_prediction/input.fasta_temp/3.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/1.fasta.faa -o plasmid_prediction/input.fasta_temp/1.fasta.out+  -i plasmid_prediction/input.fasta_temp/1.fasta -p meta -q\n",
+            "prodigal -a plasmid_prediction/input.fasta_temp/8.fasta.faa -o plasmid_prediction/input.fasta_temp/8.fasta.out -i plasmid_prediction/input.fasta_temp/8.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/9.fasta.faa -o plasmid_prediction/input.fasta_temp/9.fasta.out -i plasmid_prediction/input.fasta_temp/9.fasta -p meta -q\n",
+            "+ prodigal -a plasmid_prediction/input.fasta_temp/4.fasta.faa -o plasmid_prediction/input.fasta_temp/4.fasta.out -i plasmid_prediction/input.fasta_temp/4.fasta -p meta -q\n",
+            "\n",
+            "Prodigal prediction for 9.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 6.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 0.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 7.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 8.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 4.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 5.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 1.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 3.fasta completed.\n",
+            "\n",
+            "\n",
+            "Prodigal prediction for 2.fasta completed.\n",
+            "\n",
+            "Now aligning protein sequences against database using Diamond ...\n",
+            "+ diamond blastp --query plasmid_prediction/input.fasta_temp/proteins.faa --max-target-seqs 1 --max-hsps 1 --evalue 1e-5 --id 40 --query-cover 80 --db /content/PlasmidFinder_1.0/bin/../lib/database/database.dmnd --out plasmid_prediction/input.fasta_temp/proteins.faa.daa --outfmt 6 --threads 10\n",
+            "diamond v2.0.15.153 (C) Max Planck Society for the Advancement of Science\n",
+            "Documentation, support and updates available at http://www.diamondsearch.org\n",
+            "Please cite: http://dx.doi.org/10.1038/s41592-021-01101-x Nature Methods (2021)\n",
+            "\n",
+            "#CPU threads: 10\n",
+            "Scoring parameters: (Matrix=BLOSUM62 Lambda=0.267 K=0.041 Penalties=11/1)\n",
+            "Temporary directory: plasmid_prediction/input.fasta_temp\n",
+            "#Target sequences to report alignments for: 1\n",
+            "Opening the database...  [0.131s]\n",
+            "Database: /content/PlasmidFinder_1.0/bin/../lib/database/database.dmnd (type: Diamond database, sequences: 959810, letters: 319061215)\n",
+            "Block size = 2000000000\n",
+            "Opening the input file...  [0.066s]\n",
+            "Opening the output file...  [0s]\n",
+            "Loading query sequences...  [0.232s]\n",
+            "Masking queries...  [1.738s]\n",
+            "Building query seed set...  [5.986s]\n",
+            "Algorithm: Query-indexed\n",
+            "Building query histograms...  [0.176s]\n",
+            "Allocating buffers...  [0.001s]\n",
+            "Loading reference sequences...  [1.594s]\n",
+            "Initializing temporary storage...  [0.001s]\n",
+            "Building reference histograms...  [23.411s]\n",
+            "Allocating buffers...  [0s]\n",
+            "Processing query block 1, reference block 1/1, shape 1/2.\n",
+            "Building reference seed array...  [12.91s]\n",
+            "Building query seed array...  [0.45s]\n",
+            "Computing hash join...  [1.474s]\n",
+            "Searching alignments...  [13.299s]\n",
+            "Processing query block 1, reference block 1/1, shape 2/2.\n",
+            "Building reference seed array...  [12.065s]\n",
+            "Building query seed array...  [0.3s]\n",
+            "Computing hash join...  [1.397s]\n",
+            "Searching alignments...  [13.213s]\n",
+            "Deallocating buffers...  [0.033s]\n",
+            "Clearing query masking...  [0.005s]\n",
+            "Computing alignments...  [372.08s]\n",
+            "Deallocating reference...  [0.028s]\n",
+            "Loading reference sequences...  [0s]\n",
+            "Deallocating buffers...  [0.011s]\n",
+            "Deallocating queries...  [0.004s]\n",
+            "Loading query sequences...  [0s]\n",
+            "Closing the input file...  [0s]\n",
+            "Closing the output file...  [0.005s]\n",
+            "Cleaning up...  [0s]\n",
+            "Total time = 460.749s\n",
+            "Reported 82154 pairwise alignments, 82154 HSPs.\n",
+            "82154 queries aligned.\n",
+            "\n",
+            "Diamond alignment completed.\n",
+            "\n",
+            "Now parsing Diamond alignment results ...\n",
+            "Traceback (most recent call last):\n",
+            "  File \"../bin/PlasmidFinder.py\", line 28, in <module>\n",
+            "    df = gene_content_profile(outdir+'/input.fasta', prodigal, database, cpu=cpu)\n",
+            "  File \"<string>\", line 89, in gene_content_profile\n",
+            "  File \"<string>\", line 68, in daa_to_hits\n",
+            "AttributeError: module 'pandas' has no attribute 'read_csv'\n"
           ]
         }
       ]
@@ -121,26 +308,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "YLJX13o37qFf",
-        "outputId": "c54b10c6-7460-442c-bb69-8ba521a9908f"
+        "outputId": "86fbaaf6-96c0-491a-d781-f8fab73c040c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Host key verification failed.\r\n"
+            "  File \"/usr/local/bin/diamond\", line 113\n",
+            "    print \"Diamond version %s\" % (get_diamond_version())\n",
+            "                             ^\n",
+            "SyntaxError: invalid syntax\n"
           ]
         }
       ],
       "source": [
-        "! ls -lh"
+        "!diamond help\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! Prodigal/prodigal -h\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-3iuBpojZe0M",
+        "outputId": "64dfd78f-3dc3-48ce-fbde-e7cb467021e8"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Usage:  prodigal [-a trans_file] [-c] [-d nuc_file] [-f output_type]\n",
+            "                 [-g tr_table] [-h] [-i input_file] [-m] [-n] [-o output_file]\n",
+            "                 [-p mode] [-q] [-s start_file] [-t training_file] [-v]\n",
+            "\n",
+            "         -a:  Write protein translations to the selected file.\n",
+            "         -c:  Closed ends.  Do not allow genes to run off edges.\n",
+            "         -d:  Write nucleotide sequences of genes to the selected file.\n",
+            "         -f:  Select output format (gbk, gff, or sco).  Default is gbk.\n",
+            "         -g:  Specify a translation table to use (default 11).\n",
+            "         -h:  Print help menu and exit.\n",
+            "         -i:  Specify FASTA/Genbank input file (default reads from stdin).\n",
+            "         -m:  Treat runs of N as masked sequence; don't build genes across them.\n",
+            "         -n:  Bypass Shine-Dalgarno trainer and force a full motif scan.\n",
+            "         -o:  Specify output file (default writes to stdout).\n",
+            "         -p:  Select procedure (single or meta).  Default is single.\n",
+            "         -q:  Run quietly (suppress normal stderr output).\n",
+            "         -s:  Write all potential genes (with scores) to the selected file.\n",
+            "         -t:  Write a training file (if none exists); otherwise, read and use\n",
+            "              the specified training file.\n",
+            "         -v:  Print version number and exit.\n",
+            "\n"
+          ]
+        }
       ]
     }
   ],
@@ -148,7 +381,7 @@
     "colab": {
       "name": "PlasmidFiner.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCiBW1pDRG+cmkwx5Lp/lh",
+      "authorship_tag": "ABX9TyP/b7JTQ8o5Xt66TK3w2uyP",
       "include_colab_link": true
     },
     "kernelspec": {
