--- a/PlasmidFiner.ipynb
+++ b/PlasmidFiner.ipynb
@@ -81,8 +81,8 @@
       "source": [
         "from google.colab import files\n",
         "upload = files.upload()\n",
-        "\n",
-        "! python PlasmidFinder_1.1/bin/PlasmidFinder.py -i $list(upload.keys())[0] -c 2\n",
+        "infile = list(upload.keys())[0]\n",
+        "! python PlasmidFinder_1.1/bin/PlasmidFinder.py -i $infile -c 2; rm -rf $infile\n",
         "files.download('plasmid_prediction/predictions.tsv')"
       ]
     }
@@ -91,7 +91,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9L8lTI+6dh0u7GVsEdmKH",
+      "authorship_tag": "ABX9TyMWloBNwTBhU+E8VwPKYms1",
       "include_colab_link": true
     },
     "kernelspec": {
