--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "Welcome to PlasmidFinder!\n",
         "# 1. Installing dependencies\n",
-        "Please click the play button on the left to install dependencies."
+        "Please click the play button on the left to install dependencies. It is OK if it warns that your session crashed for an unknown reason. because it restarted the kernel."
       ]
     },
     {
@@ -90,8 +90,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPXXK7bRBZwN7R4aCNYVkOm",
+      "authorship_tag": "ABX9TyMzdRwGtACn/YwtONTlPOOz",
       "include_colab_link": true
     },
     "kernelspec": {
