--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -16,7 +16,7 @@
         "id": "0P59EkBBTSyb"
       },
       "source": [
-        "Welcome to PlasmidFinder!\n",
+        "Welcome to PlasmidHunter!\n",
         "# 1. Installing dependencies\n",
         "Please click the play button on the left to install dependencies. It is OK if it warns that your session crashed for an unknown reason. because it restarted the kernel."
       ]
@@ -90,7 +90,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzdRwGtACn/YwtONTlPOOz",
+      "authorship_tag": "ABX9TyOjcb2kaz4V+oho38ZdTcKx",
       "include_colab_link": true
     },
     "kernelspec": {
