--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "Welcome to PlasmidHunter!\n",
         "# 1. Installing dependencies\n",
-        "Please click the play button on the left to install dependencies. It is OK if it warns that your session crashed for an unknown reason. because it restarted the kernel."
+        "Please click the play button on the left to install dependencies. It is OK if it warns that your session crashed for an unknown reason, because it restarted the kernel."
       ]
     },
     {
@@ -90,7 +90,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjcb2kaz4V+oho38ZdTcKx",
+      "authorship_tag": "ABX9TyOZFkOw5yPeO5rwHQn3d5jv",
       "include_colab_link": true
     },
     "kernelspec": {
