--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -55,6 +55,7 @@
       },
       "outputs": [],
       "source": [
+        "! rm -rf PlasmidHunter*\n",
         "! wget https://github.com/tianrenmaogithub/PlasmidHunter/raw/main/PlasmidHunter_1.1.zip\n",
         "! unzip PlasmidHunter_1.1.zip\n"
       ]
@@ -90,7 +91,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYbg4vP4WociLFTpwItWwk",
+      "authorship_tag": "ABX9TyMzhJ1c97+zaOKxxjTykbpr",
       "include_colab_link": true
     },
     "kernelspec": {
