--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -12,10 +12,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "4HRJOsqB-07q"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0P59EkBBTSyb"
       },
       "source": [
+        "\n",
+        "\n",
+        "\n",
+        "<img src='https://github.com/tianrenmaogithub/PlasmidHunter/raw/main/logo.png' width=150>\n",
+        "\n",
+        "\n",
+        "\n",
         "Welcome to PlasmidHunter!\n",
         "# 1. Installing dependencies\n",
         "Please click the play button on the left to install dependencies. It is OK if it warns that \"Your session crashed for an unknown reason\", because it restarted the kernel when installing Anaconda. You can ignore it and continue to the next step."
@@ -91,7 +105,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzhJ1c97+zaOKxxjTykbpr",
+      "authorship_tag": "ABX9TyPIMb2txct5nv+aqVuE1t7q",
       "include_colab_link": true
     },
     "kernelspec": {
