--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -28,9 +28,8 @@
         "\n",
         "<img src='https://github.com/tianrenmaogithub/PlasmidHunter/raw/main/logo.png' width=150>\n",
         "\n",
-        "\n",
-        "\n",
         "Welcome to PlasmidHunter!\n",
+        "<br>presented by Institute of Food Safety and Health, Illinois Institute of Technology\n",
         "# 1. Installing dependencies\n",
         "Please click the play button on the left to install dependencies. It is OK if it warns that \"Your session crashed for an unknown reason\", because it restarted the kernel when installing Anaconda. You can ignore it and continue to the next step."
       ]
@@ -105,7 +104,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIMb2txct5nv+aqVuE1t7q",
+      "authorship_tag": "ABX9TyMaGYDK5gEij/XM9ndOCUqd",
       "include_colab_link": true
     },
     "kernelspec": {
