--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -12,13 +12,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "4HRJOsqB-07q"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "0P59EkBBTSyb"
       },
@@ -104,7 +97,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaGYDK5gEij/XM9ndOCUqd",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO7I1DinSPlG9xWf53fdF/n",
       "include_colab_link": true
     },
     "kernelspec": {
