--- a/PlasmidHunter.ipynb
+++ b/PlasmidHunter.ipynb
@@ -12,6 +12,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "<a href='https://emg.reallyhelps.org' target='_blank'><img src='https://emg.reallyhelps.org/wp-content/uploads/2022/06/logo-1.png' width=250px><br>Easy Microbial Genomics (EMG)</a>\n",
+        "<p>For more online web tools, please see <a href='https://emg.reallyhelps.org/tools/' target='_blank'>https://emg.reallyhelps.org/tools/</a></p>\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BDk-eDuvN9TI"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0P59EkBBTSyb"
       },
@@ -98,7 +112,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN02clJv4eFt5juFXudCks1",
+      "authorship_tag": "ABX9TyNO+1v1d0x1dnUibApci6gZ",
       "include_colab_link": true
     },
     "kernelspec": {
